--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,16 @@
-name: 'Hello World'
-description: 'Greet someone and record the time'
+name: 'Email'
+description: 'Send an email notification'
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
+  to:  # id of input
+    description: 'Recipient email address'
     required: true
-    default: 'World'
+  subject:
+    description: 'Email subject'
+  body:
+    description: 'Email body'
 outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+  status: # id of output
+    description: 'The delivery status of the notification'
 runs:
   using: 'node12'
   main: 'index.js'
