--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "dependencies": {
         "@actions/core": "^1.1.0",
         "@actions/github": "^1.1.0",
-        "axios": "^0.24.0"
+        "@cinotify/js": "^1.1.0"
     }
 }
