--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "hello-world-javascript-action",
+    "name": "cinotify-email-action",
     "version": "1.0.0",
     "description": "This action prints \"Hello World\" or \"Hello\" + the name of a person to greet to the log.",
     "main": "index.js",
