--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@actions/core": "^1.10.0",
         "@actions/github": "^5.1.1",
-        "@cinotify/js": "^1.3.0"
+        "@cinotify/js": "^1.3.0",
+        "mime": "^3.0.0"
     }
 }
