--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -11,3 +11,14 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm ci
       - run: exit 0
+  e2e:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref != 'refs/heads/main'
+    steps:
+      - uses: cinotify/github-action@staging
+        with:
+          to: "staging-cinotify@jesse.sh"
+          subject: "staging cinotify github action"
+          body: "<em>This is a notification from GitHub actions.</em>"
+          type: "text/html"
