--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     name: demo
     steps:
-      - uses: cinotify/github-action@main
+      - run: env
+      - uses: cinotify/github-action@ci
         with:
           to: "jesse@jesse.sh"
-          subject: "${{ github.event.ref }}"
-          body: "<a href='https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}'>view build</a>"
+          subject: "${{ github.event.pull_request.head.sha || github.sha }}"
+          body: "<a href='https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}'>view build</a> - ${{github.event.head_commit.message}}"
           type: "text/html"
