--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-    "name": "cinotify-email-action",
-    "version": "1.6.0",
-    "description": "This action prints \"Hello World\" or \"Hello\" + the name of a person to greet to the log.",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "engines": {
-        "node": ">=20"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/actions/hello-world-javascript-action.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/actions/hello-world-javascript-action/issues"
-    },
-    "homepage": "https://github.com/actions/hello-world-javascript-action#readme",
-    "dependencies": {
-        "@actions/core": "^1.10.0",
-        "@actions/github": "^5.1.1",
-        "mime": "^3.0.0"
-    }
+  "name": "cinotify-email-action",
+  "version": "1.6.0",
+  "description": "This action prints \"Hello World\" or \"Hello\" + the name of a person to greet to the log.",
+  "main": "index.js",
+  "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest"
+  },
+  "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/actions/hello-world-javascript-action.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/actions/hello-world-javascript-action/issues"
+  },
+  "homepage": "https://github.com/actions/hello-world-javascript-action#readme",
+  "dependencies": {
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "mime": "^3.0.0"
+  },
+  "devDependencies": {
+    "vitest": "^1.4.0"
+  }
 }
