--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: cinotify/github-action@main
         with:
           to: "jesse@jesse.sh"
-          subject: "${{ github.event.ref }}"
+          subject: "${{ github.event.pull_request.head.sha || github.sha }}"
           body: "<a href='https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}'>view build</a>"
           type: "text/html"
