--- a/action.yml
+++ b/action.yml
@@ -1,23 +1,24 @@
-name: 'CINotify Email'
+name: "CINotify Email"
 branding:
-  icon: 'mail'
-  color: 'yellow'
-description: 'Send an email notification'
+  icon: "mail"
+  color: "yellow"
+description: "Send an email notification"
 inputs:
-  to:  # id of input
-    description: 'Recipient email address'
+  to: # id of input
+    description: "Recipient email address"
     required: true
   subject:
-    description: 'Email subject'
+    description: "Email subject"
   body:
-    description: 'Email body'
+    description: "Email body"
   type:
-    description: 'Email body MIME type'
+    description: "Email body MIME type"
+    default: "text/plain"
   attachment:
-    description: 'Email attachment'
+    description: "Email attachment"
 outputs:
   status: # id of output
-    description: 'The delivery status of the notification'
+    description: "The delivery status of the notification"
 runs:
-  using: 'node20'
-  main: 'index.js'
+  using: "node20"
+  main: "index.js"
