--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -14,3 +14,4 @@ jobs:
           to: "jesse@jesse.sh"
           subject: "${{ github.event.pull_request.head.sha || github.sha }}"
           body: "<a href='https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}'>view build</a>"
+          type: "text/html"
